# 4.pyclass

./: README.md  arquivo.py  desafio.py  exemplo.csv  exemplo_dict.py  exemplo_lista.py  exercicios.py  funcao.py  pyproject.toml
